# mmdvm-statemachine

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: DEVELOPMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md
src/mmdvm_statemachine/: __init__.py  __main__.py  config.py  logging_setup.py  models.py
tests/: __init__.py  test_config.py  test_models.py
